--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".activities.MenuActivity"/>
         <activity android:name=".activities.ConsultasMenuActivity"/>
+        <activity android:name=".activities.NovaConsultaActivity"/>
     </application>
 
 </manifest>
